Revise first pass on entire workshop handout

--- a/handout.tex
+++ b/handout.tex
@@ -32,12 +32,11 @@
 \begin{document}
 
 \begin{tabbing}
-    \`\=\kill
-    \textbf{Workshop:} The WordPress Way
-    \` September 11, 2015 \\
-    \textbf{Instructor:} Kan Ouivirach ({\tt \small kan@prontomarketing.com})
-        and Navarant Pramuksan ({\tt \small oy@prontomarketing.com}) \\
-    \textbf{Company:} Pronto Marketing (Research and Develpment Team)
+  \`\=\kill
+  \textbf{Workshop:} Agile Engineering Practices Workshop
+  \` February 21, 2016 \\
+  \textbf{Instructor:} Kan Ouivirach ({\tt \small kan@prontomarketing.com}) \\
+  \textbf{Company:} Pronto Tools ({\tt \small http://www.prontotools.io/})
 \end{tabbing}
 
 \hrule
@@ -45,331 +44,341 @@
 \vspace{.25in}
 
 \begin{center}
-    \textbf{\Large The WordPress Way: Customizing WordPress Theme and
-        Developing WordPress Plugins}
+  \textbf{\Large Agile Engineering Practices Workshop}
 \end{center}
 
 \vspace{.15in}
 
-\noindent \textbf{Introduction:} This workshop is intended for anyone who wants
-to learn WordPress and do things the WordPress way. Participants will learn how
-to customize a WordPress theme and better understand how WordPress template
-hierarchy works. Participants will also learn how to develop a WordPress plugin
-to enhance the funtionality of the theme. By the end of this workshop,
-participants will be able to develop their own WordPress theme and use
-WordPress as a solution to real-world problems.
+\noindent \textbf{Introduction:} This workshop aims for anyone who wants to
+learn the Agile engineering practices. Participants will learn how to use the
+test-driven development (TDD) and acceptance-test driven development (ATDD) to
+develop software. We will use Python since it is relatively easy to get started
+developing a program. By the end of this workshop, participants should be able
+to use the practices in the real-world software development.
 
-\section*{Customizing WordPress Theme}
+\section*{Solving FizzBuzz using Test-Driven Development}
 
-\noindent In this section, we will customize a WordPress theme
-``ThirtyFifteen'' and follow the WordPress template hierarchy~[1] to extend a
-new template for a new custom post type. Let's get started. \\
-
-\noindent We are going to duplicate the ThirtyFifteen theme and rename it to
-TheWordPressWay. Doing this way allows us to keep the originial theme
-unmodified and redo this workshop as many times as we want.
+\noindent In this section, we will solve the FizzBuzz problem using the
+test-driven development (TDD). FizzBuzz has 4 simple rules:
 
 \begin{enumerate}
-    \item Go to the directory {\tt wp-content/themes/}.
-    \item Duplicate the directory {\tt twentyfifteen} and rename it
-        to {\tt thewordpressway}.
-    \item Open the file {\tt style.css}, remove the current settings in the
-        comments, and use these settings below:
-        \begin{itemize}
-            \item[-] Theme Name: The WordPress Way
-            \item[-] Author: Kan Ouivirach
-            \item[-] License: MIT
-        \end{itemize}
-    \item Go to your WordPress site and change the theme to The WordPress Way.
+  \item If the number is divisible by 3, we get ``Fizz.''
+  \item If the number is divisible by 5, we get ``Buzz.''
+  \item If the number is divisible by 3 and 5, we get ``FizzBuzz.''
+  \item Otherwise, we get the same number as we input.
 \end{enumerate}
 
-\FloatBarrier
-
-\noindent Right now we should have The WordPress Way theme activated as seen in
-Figure~\ref{fig:activating-custom-theme}. Next we are going to make some simple
-change on a very simple template. Here the template like 404 page is a good
-start.
-
-\begin{figure}[t]
-    \centering
-    \includegraphics[width=4in]{figures/activating-custom-theme}
-    \caption{Activating a Custom Theme}
-    \label{fig:activating-custom-theme}
-\end{figure}
-
-\begin{enumerate}
-    \item Go to your theme directory {\tt wp-content/themes/thewordpressway}.
-    \item Open the file {\tt 404.php}.
-    \item Let's make it more attractive. Find any image from the Internet and
-        save it in the directory {\tt images} inside your theme directory.
-    \item Put the image somewhere on the page. Don't forget to put a credit if
-        the image is not yours.
-    \item When we access a non-existing page such as {\tt
-        http://localhost/?p=99999}, we should see our nice custom 404 page.
-\end{enumerate}
-
-\noindent Your 404 page should look similar to the one shown in
-Figure~\ref{fig:custom-404-page}. Below is the code that does that.
+\noindent We will set up a test suite first. Let's create a Python script named
+{\tt fizzbuzz\_test.py} and start with the code below.
 
 \begin{verbatim}
-<div id="primary" class="content-area">
-  <main id="main" class="site-main" role="main">
-    <section class="error-404 not-found">
-      <header class="page-header">
-        <h1 class="page-title">Oops! Sorry, this page doesn't exist.</h1>
-      </header>
-      <div class="page-content">
-        <p style="text-align: center;">
-          <img src="<?php echo get_template_directory_uri(); ?>/images/molodotme.jpg">
-        </p>
-        <p style="text-align: center;">
-          <strong>Credit:</strong> <a href="http://molome.com/" target="_blank">MOLOME</a>
-        </p>
-        <?php get_search_form(); ?>
-      </div>
-    </section>
-  <main>
-</div>
+import unittest
+
+
+class FizzBuzzTest(unittest.TestCase):
+    pass
+
+
+if __name__ == '__main__':
+    unittest.main()
 \end{verbatim}
 
-\begin{figure}[t]
-    \centering
-    \includegraphics[width=3in]{figures/custom-404-page}
-    \caption{Custom 404 Page}
-    \label{fig:custom-404-page}
-\end{figure}
+\noindent Run the script using the command:
 
-\noindent The function {\tt get\_template\_directory\_uri} we use in the code
-above returns the template directory URI for the current theme. It is better to
-use it rather than hardcode the theme path. \\
+\begin{verbatim}
+$ python fizzbuzz_test.py
+\end{verbatim}
 
-\noindent Great work! Now you have an experience on customizing the WordPress
-template. You can upgrade yourself to the next level, extending the template.
+\noindent We should see the output like this:
+
+\begin{verbatim}
+----------------------------------------------------------------------
+Ran 0 tests in 0.000s
+
+OK
+\end{verbatim}
+
+\noindent This means we have 0 tests and it is what we expect since we have not
+written any test yet. Let's add a test case now. Add code below to the test
+suite.
+
+\begin{verbatim}
+class FizzBuzzTest(unittest.TestCase):
+    def test_input_3_should_return_fizz(self):
+        result = fizzbuzz(3)
+        self.assertEqual(result, 'Fizz')
+\end{verbatim}
+
+\noindent \textbf{Note:} When we write a test case, we design the way how we
+will use the method (or function). \\
+
+\noindent Let's run the script again. We should see the output like this:
+
+\begin{verbatim}
+E
+======================================================================
+ERROR: test_input_3_should_return_fizz (__main__.FizzBuzzTest)
+----------------------------------------------------------------------
+Traceback (most recent call last):
+  File "fizzbuzz_test.py", line 6, in test_input_3_should_return_fizz
+    result = fizzbuzz(3)
+NameError: global name 'fizzbuzz' is not defined
+
+----------------------------------------------------------------------
+Ran 1 test in 0.000s
+
+FAILED (errors=1)
+\end{verbatim}
+
+\noindent We get an error here. Again this is what we expect since we have not
+written any code for FizzBuzz yet. See what the error says. We will follow it.
 \\
 
-\noindent {\bf Challenge:} Let's look at the WordPress template hierarchy for a
-minute. Suppose we have our own custom post type and want to create a template
-for it. What should we do to accomplish this task? \\
+\noindent Let's fix the error first and make the test fails. Now we create a
+new separate Python script named {\tt fizzbuzz.py} then write the code below.
 
-\noindent {\bf Hint:} Look at the WordPress template hierarchy and read Post
-Type Template~[2].
+\begin{verbatim}
+def fizzbuzz():
+    pass
+\end{verbatim}
 
-\section*{Developing WordPress Plugin}
+\noindent Import our code into our test suite. Add the code below to {\tt
+fizzbuzz\_test.py}.
 
-\noindent In this section, we will create a simple plugin called My Awesome
-Team. The scenario is that you want to show how awesome your team is by listing
-your teammates on your WordPress site. You also want to be able to click on
-your teammate's name and see his/her brief information. Let's get your hand
-dirty! \\
+\begin{verbatim}
+from fizzbuzz import fizzbuzz
+\end{verbatim}
 
-\noindent Create the plugin by following these steps below.
+\noindent Run the test suite again. We should get the output like this:
+
+\begin{verbatim}
+E
+======================================================================
+ERROR: test_input_3_should_return_fizz (__main__.FizzBuzzTest)
+----------------------------------------------------------------------
+Traceback (most recent call last):
+  File "fizzbuzz_test.py", line 8, in test_input_3_should_return_fizz
+    result = fizzbuzz(3)
+TypeError: fizzbuzz() takes no arguments (1 given)
+
+----------------------------------------------------------------------
+Ran 1 test in 0.000s
+
+FAILED (errors=1)
+\end{verbatim}
+
+\noindent The error has changed now. We design our FizzBuzz program to take one
+argument, so we need to implement our program that way. Let's take one
+parameter in our method. \\
+
+\begin{verbatim}
+def fizzbuzz(number):
+    pass
+\end{verbatim}
+
+\noindent Run the test suite again.
+
+\begin{verbatim}
+F
+======================================================================
+FAIL: test_input_3_should_return_fizz (__main__.FizzBuzzTest)
+----------------------------------------------------------------------
+Traceback (most recent call last):
+  File "fizzbuzz_test.py", line 9, in test_input_3_should_return_fizz
+    self.assertEqual(result, 'Fizz')
+AssertionError: None != 'Fizz'
+
+----------------------------------------------------------------------
+Ran 1 test in 0.000s
+
+FAILED (failures=1)
+\end{verbatim}
+
+\noindent Our test fails now! We can then start the TDD process. Take your
+time. :-)
+
+\section*{Solving FizzBuzz using Acceptance Test-Driven Development}
+
+\noindent In this section, we will develop a Web application for FizzBuzz using
+the acceptance test-driven development (ATDD). The application contains a form
+to take a number as input then prints out the result from the FizzBuzz program
+we have done in the previous section.
+
+\subsection*{Robot Framework}
+
+\noindent We will learn the Robot Framework before use it for the ATDD. Let's
+follow the steps below:
 
 \begin{enumerate}
-    \item Create a new directory {\tt my-awesome-team} under the directory {\tt
-        wp-content/plugins}.
-    \item Create a new file {\tt my-awesome-team.php} under the new directory
-        {\tt my-awesome-team} and place the code below
-\begin{verbatim}
-<?php
-/*
- * Plugin Name: My Awesome Team
- * Description: A plugin to list my awesome teammates
- * Author: Kan Ouivirach
- */
-\end{verbatim}
-    \item Go to the Plugins page. If you have done it correctly, your plugin
-        will be listed as shown in Figure~\ref{fig:my-awesome-team-plugin}.
+  \item Go to the GitHub {\tt https://github.com/zkan/hello-robotframework}.
+  \item Clone the code to the local machine.
+  \item Follow the readme on the GitHub.
 \end{enumerate}
 
-\begin{figure}[t]
-    \centering
-    \includegraphics[width=3in]{figures/my-awesome-team-plugin}
-    \caption{My Awesome Team Plugin}
-    \label{fig:my-awesome-team-plugin}
-\end{figure}
-
-\noindent Next we are going to register the teammate custom post type since we
-would like to keep our teammate information in the database. For more
-information on registering a custom post type, see Register Post Type~[3].
-Below is the code for registering our custom post type. Place it in the plugin
-file {\tt my-awesome-team.php}.
+\noindent If we set it up correctly, we should be able to run the command below
+without any error.
 
 \begin{verbatim}
-function teammate_setup_post_type() {
-  $labels = array(
-    'name'          => __( 'Teammates' ),
-    'singular_name' => __( 'Teammate' ),
-    'add_new'       => __( 'Add New' ),
-    'add_new_item'  => __( 'Add New Teammate' ),
-    'edit_item'     => __( 'Edit Teammate' ),
-    'new_item'      => __( 'New Teammate' ),
-    'all_items'     => __( 'All Teammate' ),
-    'view_item'     => __( 'View Teammate' ),
-    'search_items'  => __( 'Search Teammate' ),
-    'not_found'     => __( 'No Teammate Found' )
-  );
-
-  $args = array(
-    'labels'             => $labels,
-    'description'        => 'Teammate involved in attempting to achieve a common goal.',
-    'public'             => true,
-    'publicly_queryable' => true,
-    'has_archive'        => true,
-    'capability_type'    => 'page',
-    'show_ui'            => true,
-    'hierarchical'       => false,
-    'query_var'          => true,
-    'supports'           => array(
-      'title',
-      'editor',
-      'thumbnail'
-    ),
-    'show_in_nav_menus'  => false,
-  );
-  register_post_type( 'teammate', $args );
-}
-add_action( 'init', 'teammate_setup_post_type', 10 );
+$ robot testcases/google.robot
 \end{verbatim}
 
-\noindent If you have done this correctly, the teammate menu should be listed
-in the site as shown in Figure~\ref{fig:teammate-menu}. That's it! Now we can
-save our teammate information in the database. Simple, right? :-) \\
+\noindent We should see a browser is fired up and the output gets printed out
+like this:
+
+\begin{verbatim}
+==============================================================================
+Google
+==============================================================================
+Google for robot framework                                            | PASS |
+------------------------------------------------------------------------------
+Google                                                                | PASS |
+1 critical test, 1 passed, 0 failed
+1 test total, 1 passed, 0 failed
+==============================================================================
+Output:  /Users/zkan/Projects/hello-robotframework/output.xml
+Log:     /Users/zkan/Projects/hello-robotframework/log.html
+Report:  /Users/zkan/Projects/hello-robotframework/report.html
+\end{verbatim}
+
+\subsection*{Flask (A Python Microframework)}
+
+\noindent Flask is a Web microframework for Python. It is very easy to get a
+Web application up and running in minutes. We will use it to develop a Web
+application in this workshop. Let's follow the steps below:
+
+\begin{enumerate}
+  \item Go to the GitHub {\tt https://github.com/zkan/fizzbuzz-flask}.
+  \item Clone the code to the local machine.
+  \item Follow the readme on the GitHub.
+\end{enumerate}
+
+\noindent We then should be able to start a Web server with the command below:
+
+\begin{verbatim}
+$ python web/app.py
+\end{verbatim}
+
+\noindent Open the browser and go to {\tt http://0.0.0.0:5000} or {\tt
+http://localhost:5000}. We should see the page as shown in
+Figure~\ref{fig:flask-web-server-local}. \\
 
 \begin{figure}[t]
-    \centering
-    \includegraphics[width=6in]{figures/teammate-menu}
-    \caption{Teammate Menu}
-    \label{fig:teammate-menu}
+  \centering
+  \includegraphics[width=4in]{figures/flask-web-server-local}
+  \caption{Flask Web server on local machine.}
+  \label{fig:flask-web-server-local}
 \end{figure}
 
-\noindent Our work is not done yet. We need to show our awesome teammates on
-the site, so let's create a page to show them. One way to do this is to
-manually put the information on the page with the code below. Don't forget to
-switch to the Text mode before place the code. Figure~\ref{fig:teammate-list}
-shows the result from the code.
+\noindent Let's see the code in {\tt app.py}.
 
 \begin{verbatim}
-<h4><a href="#" onClick="teammate_toggle('teammate_1')">Kan Ouivirach</a></h4>
-<p id="teammate_1" style="display: none;">Instructor</p>
-<h4><a href="#" onClick="teammate_toggle('teammate_2')">Navarat Pramuksan</a></h4>
-<p id="teammate_2" style="display: none;">Teaching Assistant</p>
+from flask import Flask, render_template, request
 
-<script type="text/javascript">
-function teammate_toggle(id) {
-  var element = document.getElementById(id);
-  element.style.display = ((element.style.display != 'none') ? 'none' : 'block');
-}
-</script>
+from fizzbuzz import fizzbuzz
+
+
+app = Flask(__name__)
+
+
+@app.route('/', methods=['GET', 'POST'])
+def index():
+    result = '?'
+
+    if request.method == 'POST':
+        number = int(request.form.get('number'))
+        result = fizzbuzz(number)
+
+    return render_template('index.html', result=result)
+
+
+if __name__ == '__main__':
+    app.run(host='0.0.0.0', port=5000, debug=True)
 \end{verbatim}
 
-\begin{figure}[t]
-    \centering
-    \includegraphics[width=4in]{figures/teammate-list}
-    \caption{Teammate List}
-    \label{fig:teammate-list}
-\end{figure}
+\noindent Play around with the app and take some minutes to understand how the
+code works.
 
-\noindent However, this way is not convenient for us to maintain our teammate
-list. The better way is to use the shortcode API~[4], which is a nice feature
-that enables us to generate content without inserting any HTML code. Let's
-build one! Open our plugin file {\tt my-awesome-team.php} and place the code
-below.
+\subsection*{Getting Started with ATDD using Robot Framework}
+
+\noindent Let's go back to the folder {\tt hello-robotframework} and open the
+script {\tt fizzbuzz.robot}.
 
 \begin{verbatim}
-function teammate_shortcode( $atts ) {
-  $args = array(
-    'post_type' => 'teammate',
-    'order'     => 'ASC'
-  );
+*** Settings ***
+Resource         ../resources/common_res.txt
+Test Setup       Go to homepage
+Test Teardown    Close Browser
 
-  $html = '';
 
-  $posts = get_posts( $args );
-  foreach ( $posts as $post ) {
-    $html .= '<h4><a href="#" onClick=\'teammate_toggle("teammate_';
-    $html .= $post->ID;
-    $html .= '")\'>';
-    $html .= $post->post_title;
-    $html .= '</a></h4>';
-    $html .= '<p id="teammate_';
-    $html .= $post->ID;
-    $html .= '" style="display: none;">';
-    $html .= $post->post_content;
-    $html .= '</p>';
-  }
+*** Variables ***
+${HOMEPAGE}    http://localhost:5000/
+${BROWSER}     chrome
 
-  $html .= '<script type="text/javascript">';
-  $html .= 'function teammate_toggle(id) {';
-  $html .= 'var element = document.getElementById(id);';
-  $html .= 'element.style.display = ((element.style.display != "none") ? "none" : "block");';
-  $html .= '}';
-  $html .= '</script>';
 
-  return $html;
-}
-add_shortcode( 'teammate', 'teammate_shortcode' );
+*** Keywords ***
+Go to homepage
+    Open Browser    ${HOMEPAGE}    ${BROWSER}
+
+
+*** Test Cases ***
+Go to app and see the initial page
+    Page Should Contain              Input:
+    Page Should Contain              Result: ?
+    Page Should Contain Textfield    name=number
+    Page Should Contain Button       Submit
+
+Go to app and input 3 then should see Fizz
+    Input Text             name=number    3
+    Submit Form
+    Page Should Contain    Result: Fizz
 \end{verbatim}
 
-\noindent What we just did is that we created a function to query the posts of
-which post type is {\tt teammate} and constructed the HTML and return it. At
-the end, we registered our function to the shortcode {\tt teammate}. \\
-
-\noindent Right now we can go back to edit the page and just put {\tt
-[teammate]} in the content. If we have done it correcly, we should have the
-result the same as shown in Figure~\ref{fig:teammate-list}. Well done! \\
-
-\noindent What if we want to limit the number of teammates to show? We can do
-that by allowing our shortcode to take parameters. WordPress has a nice
-function we can use called {\tt shortcode\_atts}~[4]. The description from
-Shortcode API~[5] says:
-
-\begin{quote}
-Combines user shortcode attributes with known attributes and fills in defaults
-when needed. The result will contain every key from the known attributes,
-merged with values from shortcode attributes.
-\end{quote}
-
-\noindent We can modify our code before we define the arguments for the
-function {\tt get\_posts} as follows.
+\noindent Here we already have two test cases. Let's try running it using the
+command below:
 
 \begin{verbatim}
-$defined_atts = array(
-  'limit' => -1,
-);
-extract( shortcode_atts( $defined_atts, $atts ) );
-
-if ( $limit ) {
-    $posts_per_page = $limit;
-}
-
-$args = array(
-  'posts_per_page' => $posts_per_page,
-  'post_type'      => 'teammate',
-  'order'          => 'ASC'
-);
+$ robot testcases/fizzbuzz.robot
 \end{verbatim}
 
-\noindent Go back to edit the page. Change {\tt [teammate]} to {\tt [teammate
-limit=1]} and see what happens. Try to play around with it. :-) \\
+\noindent {\bf Note:} Keep the FizzBuzz Web application up and running and use
+the right virtual environment. \\
 
-\noindent {\bf Challenge:} It is not so nice to render the JavaScript code
-along with the HTML we generate. It would be better if we can refactor it into
-its own function. \\
+\noindent Let's try adding a new test case.
 
-\noindent {\bf Hint:} Look at the function {\tt wp\_enqueue\_script}~[6]. Try
-to understand how we can use it here. \\
+\begin{verbatim}
+Go to app and input 6 then should see Fizz
+    Input Text             name=number    6
+    Submit Form
+    Page Should Contain    Result: Fizz
+\end{verbatim}
 
-\noindent Hope you enjoy the workshop!
+\noindent Run the robot again. We should get the output like this:
 
-\section*{References}
+\begin{verbatim}
+==============================================================================
+Fizzbuzz
+==============================================================================
+Go to app and see the initial page                                    | PASS |
+------------------------------------------------------------------------------
+Go to app and input 3 then should see Fizz                            | PASS |
+------------------------------------------------------------------------------
+Go to app and input 6 then should see Fizz                            | FAIL |
+Page should have contained text 'Result: Fizz' but did not
+------------------------------------------------------------------------------
+Fizzbuzz                                                              | FAIL |
+3 critical tests, 2 passed, 1 failed
+3 tests total, 2 passed, 1 failed
+==============================================================================
+Output:  /Users/zkan/Projects/hello-robotframework/output.xml
+Log:     /Users/zkan/Projects/hello-robotframework/log.html
+Report:  /Users/zkan/Projects/hello-robotframework/report.html
+\end{verbatim}
 
-\begin{itemize}
-    \item[1] WordPress Template Hierarchy -- {\tt http://wphierarchy.com/}
-    \item[2] Post Type Template -- {\tt http://codex.wordpress.org/Post\_Type\_Templates}
-    \item[3] Register Post Type -- {\tt http://codex.wordpress.org/Function\_Reference/register\_post\_type}
-    \item[4] Function {\tt shortcode\_atts} -- {\tt https://codex.wordpress.org/Function\_Reference/shortcode\_atts}
-    \item[5] Shortcode API -- {\tt https://codex.wordpress.org/Shortcode\_API}
-    \item[6] Function {\tt wp\_enqueue\_script} -- {\tt https://codex.wordpress.org/Function\_Reference/wp\_enqueue\_script}
-\end{itemize}
+\noindent As seen in the output above, we have 1 failed test. This is what we
+expect. We first create a test case then we fix it by implementing the feature
+with the actual code. ATDD process starts now. Take your time. :-) \\\\
+
+\noindent ``Learning is experience. Everything else is just information.'' ---
+Albert Einstein
 
 \end{document}
