Specify the folder for fizzbuzz.robot

--- a/handout.tex
+++ b/handout.tex
@@ -301,7 +301,7 @@ code works.
 \subsection*{Getting Started with ATDD using Robot Framework}
 
 \noindent Let's go back to the folder {\tt hello-robotframework} and open the
-script {\tt fizzbuzz.robot}.
+script {\tt fizzbuzz.robot} under the folder {\tt testcases}.
 
 \begin{verbatim}
 *** Settings ***
