--- a/handout.tex
+++ b/handout.tex
@@ -49,6 +49,16 @@
 
 \vspace{.15in}
 
+\noindent {\bf Prerequisite:} Participants should have the following software
+tools installed on their machine.
+
+\begin{itemize}
+  \item Python -- {\tt https://www.python.org/}
+  \item Virtualenv -- {\tt https://virtualenv.pypa.io/}
+  \item Git -- {\tt https://git-scm.com/}
+  \item Firefox or Chrome Browser
+\end{itemize}
+
 \noindent \textbf{Introduction:} This workshop aims for anyone who wants to
 learn the Agile engineering practices. Participants will learn how to use the
 test-driven development (TDD) and acceptance-test driven development (ATDD) to
