Revise heading and title

--- a/handout.tex
+++ b/handout.tex
@@ -33,8 +33,10 @@
 
 \begin{tabbing}
   \`\=\kill
-  \textbf{Workshop:} Agile Engineering Practices Workshop
+  \textbf{Workshop:} Agile Engineering Practices
   \` February 21, 2016 \\
+  \textbf{Course: } Software Development and Quality Improvement (Jan 2017)
+  \` CSIM, AIT \\
   \textbf{Instructor:} Kan Ouivirach ({\tt \small kan@prontomarketing.com}) \\
   \textbf{Company:} Pronto Tools ({\tt \small http://www.prontotools.io/})
 \end{tabbing}
@@ -44,7 +46,9 @@
 \vspace{.25in}
 
 \begin{center}
-  \textbf{\Large Agile Engineering Practices Workshop}
+  \textbf{\Large Agile Engineering Practices:} \\
+  \vspace{.1in}
+  \textbf{\large Test-Driven Development \& Acceptance Test-Driven Development}
 \end{center}
 
 \vspace{.15in}
