Add course code

--- a/handout.tex
+++ b/handout.tex
@@ -35,8 +35,8 @@
   \`\=\kill
   \textbf{Workshop:} Agile Engineering Practices
   \` February 21, 2016 \\
-  \textbf{Course: } Software Development and Quality Improvement (Jan 2017)
-  \` CSIM, AIT \\
+  \textbf{Course:} AT70.19 Software Development and Quality Improvement (Jan
+  2017) \` CSIM, AIT \\
   \textbf{Instructor:} Kan Ouivirach ({\tt \small kan@prontomarketing.com}) \\
   \textbf{Company:} Pronto Tools ({\tt \small http://www.prontotools.io/})
 \end{tabbing}
