Change date and add warning regarding using Python 2.7

--- a/handout.tex
+++ b/handout.tex
@@ -34,9 +34,9 @@
 \begin{tabbing}
   \`\=\kill
   \textbf{Workshop:} Agile Engineering Practices
-  \` February 21, 2017 \\
+  \` March 8, 2018 \\
   \textbf{Course:} AT70.19 Software Development and Quality Improvement (Jan
-  2017) \` CSIM, AIT \\
+  2018) \` CSIM, AIT \\
   \textbf{Instructor:} Kan Ouivirach ({\tt \small kan@prontomarketing.com}) \\
   \textbf{Company:} Pronto Tools ({\tt \small http://www.prontotools.io/})
 \end{tabbing}
@@ -70,7 +70,12 @@ develop high-quality software. Also, they will learn Python and use it to
 implement a simple program since Python is relatively easy to get started with
 less effort compared to most programming languages. By the end of this
 workshop, participants should be able to use the practices they learn here in
-the real-world software development.
+the real-world software development. \\
+
+\noindent \textbf{Warning:} Even though Python 2.7 will retire in 2 years from
+now, we still choose to use Python 2.7 here to avoid any incompatibility issue
+with the Selenium2Library library. After this workshop, all participants are
+encouraged to try to upgrade the code and libraries to Python 3+.
 
 \section*{Solving FizzBuzz using Test-Driven Development}
 
