Revise description :bear:

--- a/handout.tex
+++ b/handout.tex
@@ -54,7 +54,7 @@
 \vspace{.15in}
 
 \noindent {\bf Prerequisite:} Participants should have the following software
-tools installed on their machine.
+tools, especially Python and Chrome, installed on their machine.
 
 \begin{itemize}
   \item Python -- {\tt https://www.python.org/}
@@ -66,16 +66,18 @@ tools installed on their machine.
 \noindent \textbf{Introduction:} This workshop aims for anyone who wants to
 learn the Agile engineering practices. Participants will learn how to use the
 test-driven development (TDD) and acceptance-test driven development (ATDD) to
-develop high-quality software. Also, they will learn Python and use it to
-implement a simple program since Python is relatively easy to get started with
-less effort compared to most programming languages. By the end of this
-workshop, participants should be able to use the practices they learn here in
-the real-world software development. \\
+develop high-quality software. In this workshop, we will use Python to program
+since it is relatively easy to get started with and it will take less effort to
+learn compared to most programming languages. It also makes us able to focus
+more on building software rather than worrying about the code syntax. By the
+end of this workshop, participants should be able to use the practices they
+experience in the real-world software development. \\
 
 \noindent \textbf{Warning:} Even though Python 2.7 will retire in 2 years from
 now, we still choose to use Python 2.7 here to avoid any incompatibility issue
-with the Selenium2Library library. After this workshop, all participants are
-encouraged to try to upgrade the code and libraries to Python 3+.
+with the Selenium2Library library. However, after this workshop, every
+participant is encouraged to try to upgrade the code and libraries to Python
+3+.
 
 \section*{Solving FizzBuzz using Test-Driven Development}
 
